# eduLLM-Evals

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  schemas.txt
data/: README.md  scenarios.jsonl
scripts/: assign_irt_params.py  estimate_placeholder_params.py  finalize_qmatrix.py  generate_qmatrix.py  retry_ties.py  test.py  verify_qmatrix.py
scripts/aws/: launch_prometheus.sh  prometheus_ctl.sh  tunnel.sh
scripts/cluster/: serve_prometheus.sbatch  setup_prometheus.sh  tunnel.sh
tests/: conftest.py  test_engine_sim.py  test_mirt.py  test_selector.py
tutor_cat/: __init__.py  cli.py  dataio.py  engine.py  judge.py  mirt.py  plotting.py  schemas.py  selector.py  tutors.py
