[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-cat"
version = "0.1.0"
description = "CAT-driven MIRT evaluation pipeline for LLM tutors (LLM-judge graded, per PRD)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=1.0",
    "truststore>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tutor-cat = "tutor_cat.cli:main"

[tool.setuptools.packages.find]
include = ["tutor_cat*"]
